<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Acivity.ForgetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.florent37.shapeofview.shapes.ArcView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:elevation="4dp"
                    app:shape_arc_height="40dp"
                    app:shape_arc_position="bottom">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/background"
                        android:scaleType="fitXY"
                        android:src="@drawable/farm_back" />

                </com.github.florent37.shapeofview.shapes.ArcView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="7dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@string/logo"
                            android:src="@drawable/logo" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:gravity="center"
                            android:text="@string/enter_registered_email"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/email"
                            android:textColorHint="@color/colorPrimaryDark"
                            app:boxStrokeColor="@color/colorPrimaryDark"
                            app:hintAnimationEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/forget_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawableStart="@drawable/email"
                                android:drawablePadding="7dp"
                                android:inputType="textWebEmailAddress"
                                android:maxLength="40"
                                android:maxLines="1"
                                android:textColor="@color/colorPrimaryDark" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/forget_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingStart="40dp"
                            android:paddingTop="7dp"
                            android:paddingEnd="40dp"
                            android:paddingBottom="7dp"
                            android:text="@string/submit"
                            android:textColor="@android:color/black"
                            android:theme="@style/AppTheme" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/forget_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>
