<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/product_image"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:elevation="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/farm_back"
            app:riv_corner_radius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/products"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enter_qty"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:gravity="end"
                android:layout_marginEnd="7dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@android:color/black"
                android:layout_margin="7dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:maxLength="4"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/product_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="end"
                android:layout_margin="5dp"
               />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>