<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Activity.OTPActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.florent37.shapeofview.shapes.ArcView
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:elevation="4dp"
                        app:shape_arc_height="40dp"
                        app:shape_arc_position="bottom">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/farm_back" />

                    </com.github.florent37.shapeofview.shapes.ArcView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="7dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:contentDescription="@string/logo"
                                android:src="@drawable/logo" />

                            <TextView
                                android:id="@+id/otp_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:shadowRadius="20"
                                android:text="@string/otp"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="7dp"
                                android:layout_marginRight="20dp"
                                android:hint="@string/otp"
                                android:textColorHint="@color/colorPrimaryDark"
                                app:boxStrokeColor="@color/colorPrimaryDark">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/otp_edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/password"
                                    android:drawablePadding="4dp"
                                    android:inputType="numberPassword"
                                    android:maxLength="6"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textColorHint="@color/colorPrimaryDark" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/submitOTP"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:paddingStart="40dp"
                                android:paddingTop="7dp"
                                android:paddingEnd="40dp"
                                android:paddingBottom="7dp"
                                android:text="@string/submit"
                                android:textColor="@android:color/black"
                                android:theme="@style/AppTheme" />

                            <TextView
                                android:id="@+id/resendOtp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/resend_otp"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/otp_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</layout>